Seletor general subling selector (~) seletor geral

--- a/testes/revisando-pontos-importantes/seletores.html
+++ b/testes/revisando-pontos-importantes/seletores.html
@@ -17,6 +17,10 @@
         .container h1 + p{
             background-color: tomato;
         }
+
+        .container h1 ~ p{
+            background-color: chartreuse;
+        }
     </style>
 </head>
 
@@ -50,7 +54,7 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus et, officia minus vero culpa sint porro delectus nihil facilis, alias nemo laboriosam est? Mollitia ullam, consequuntur rerum non explicabo doloremque.</p>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus et, officia minus vero culpa sint porro delectus nihil facilis, alias nemo laboriosam est? Mollitia ullam, consequuntur rerum non explicabo doloremque.</p>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus et, officia minus vero culpa sint porro delectus nihil facilis, alias nemo laboriosam est? Mollitia ullam, consequuntur rerum non explicabo doloremque.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus et, officia minus vero culpa sint porro delectus nihil facilis, alias nemo laboriosam est? Mollitia ullam, consequuntur rerum non explicabo doloremque.</p>
+        <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus et, officia minus vero culpa sint porro delectus nihil facilis, alias nemo laboriosam est? Mollitia ullam, consequuntur rerum non explicabo doloremque.</span>
 
     </div>
 </body>
