Criando atributos (mas o W3 informa que não é permitido)

--- a/testes/revisando-pontos-importantes/seletores.html
+++ b/testes/revisando-pontos-importantes/seletores.html
@@ -21,6 +21,10 @@
         .container h1 ~ p{
             background-color: chartreuse;
         }
+
+        [atributo]{
+            color: green;
+        }
     </style>
 </head>
 
@@ -55,7 +59,13 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus et, officia minus vero culpa sint porro delectus nihil facilis, alias nemo laboriosam est? Mollitia ullam, consequuntur rerum non explicabo doloremque.</p>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus et, officia minus vero culpa sint porro delectus nihil facilis, alias nemo laboriosam est? Mollitia ullam, consequuntur rerum non explicabo doloremque.</p>
         <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus et, officia minus vero culpa sint porro delectus nihil facilis, alias nemo laboriosam est? Mollitia ullam, consequuntur rerum non explicabo doloremque.</span>
+    </div>
 
+
+    <div class="container-2">
+        <p class="teste" atributo>
+            texto Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error dolor sed quaerat facilis iusto nulla aliquam, vel architecto ea corrupti a ab doloremque, dolores sapiente praesentium! Dolore laborum obcaecati officiis?
+        </p>
     </div>
 </body>
 
