--- a/aula36 (599)/index.html
+++ b/aula36 (599)/index.html
@@ -1,45 +1,49 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aula 34 (593) - Aplicando MediaQueries com o exercicio da aula 29</title>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Aula 599 - Junção do Aprendizado</title>
 </head>
+
 <body>
-    <div class="menu">
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#full-page">Sobre nós</a></li>
-            </ul>
-        </nav>
+    <div class="grid">
+        <div class="col">
+            <div class="conteudo">
+                conteudo
+            </div>
+        </div>
+        <div class="col">
+            <div class="conteudo">
+                conteudo
+            </div>
+        </div>
+        <div class="col">
+            <div class="conteudo">
+                conteudo
+            </div>
+        </div>
+        <div class="col">
+            <div class="conteudo">
+                conteudo
+            </div>
+        </div>
+        <div class="col">
+            <div class="conteudo">
+                conteudo
+            </div>
+        </div>
+        <div class="col">
+            <div class="conteudo">
+                conteudo
+            </div>
+        </div>
     </div>
-    <div class="pai" id="home">
-        <div class="filha">
-            <div class="conteudo">Conteudo</div>
-        </div>
-        <div class="filha">
-            <div class="conteudo">Conteudo</div>
-        </div>
-        <div class="filha">
-            <div class="conteudo">Conteudo</div>
-        </div>
-        <div class="filha">
-            <div class="conteudo">Conteudo</div>
-        </div>
-        <div class="filha">
-            <div class="conteudo">Conteudo</div>
-        </div>
-        <div class="filha">
-            <div class="conteudo">Conteudo</div>
-        </div>
-    </div>
-    <section class="full-page" id="sobre-nos">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda quis, earum optio dolor facere voluptate sit in magni doloremque debitis consequuntur iste explicabo atque odio autem minima! Quae, ipsa distinctio.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut accusamus illo quisquam blanditiis et placeat voluptas ducimus! A distinctio delectus et consectetur amet, similique facilis doloremque omnis dignissimos, ea sint.</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis at pariatur, vitae provident odio iure ad beatae nam eos inventore alias expedita. Earum a dolor ea laudantium dolore aperiam! Optio.</p>
-    </section>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit ab non quibusdam iure animi dolores aut possimus,
+        quisquam, consequuntur modi debitis eius tempore in neque necessitatibus, doloremque excepturi eum iste.</p>
 </body>
+
 </html>
