adicionando e estilizando segunda seção da página

--- a/aula36 (599)/index.html
+++ b/aula36 (599)/index.html
@@ -10,7 +10,47 @@
 </head>
 
 <body>
-    <div class="grid">
+    <header class="menu">
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#sobrenos">Sobre nós</a></li>
+                <li><a href="#contatos">Contatos</a></li>
+                <li><a href="#produtos">Produtos</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="grid" id="home">
+        <div class="col">
+            <div class="conteudo">
+                conteudo
+            </div>
+        </div>
+        <div class="col">
+            <div class="conteudo">
+                conteudo
+            </div>
+        </div>
+        <div class="col">
+            <div class="conteudo">
+                conteudo
+            </div>
+        </div>
+        <div class="col">
+            <div class="conteudo">
+                conteudo
+            </div>
+        </div>
+        <div class="col">
+            <div class="conteudo">
+                conteudo
+            </div>
+        </div>
+        <div class="col">
+            <div class="conteudo">
+                conteudo
+            </div>
+        </div>
         <div class="col">
             <div class="conteudo">
                 conteudo
@@ -42,8 +82,17 @@
             </div>
         </div>
     </div>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit ab non quibusdam iure animi dolores aut possimus,
-        quisquam, consequuntur modi debitis eius tempore in neque necessitatibus, doloremque excepturi eum iste.</p>
+
+    <div class="sobrenos" id="sobrenos">
+        <section>
+            <h1>Saiba mais a nosso respeito!</h1>
+
+            <h2>Sobre a empresa</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod provident voluptas deleniti laboriosam ut dolor minus mollitia soluta! Nesciunt laboriosam, minima perferendis a reprehenderit illum tenetur in necessitatibus fuga provident.</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus, facilis quam. Unde, mollitia fugit repudiandae voluptas consequatur corporis ex voluptatibus, enim pariatur exercitationem facere est error incidunt quam officia voluptatem.</p>
+       </section>
+    </div>
+
 </body>
 
 </html>
