Adicionando seção contatos e produtos

--- a/aula36 (599)/index.html
+++ b/aula36 (599)/index.html
@@ -93,6 +93,62 @@
        </section>
     </div>
 
+    <div class="contato" id="contatos">
+        <section>
+            <h1>Contate-nos</h1>
+            <form action="#">
+                <div>
+                    <label for="nome">Nome</label>
+                    <input type="text" name="nome" id="nome">
+                </div>
+
+                <div>
+                    <label for="telefone">Telefone</label>
+                    <input type="number" name="telefone" id="telefone">
+                </div>
+
+                <div>
+                    <label for="email">E-mail</label>
+                    <input type="email" name="email" id="email">
+                </div>
+
+                <div>
+                    <label for="sugestoes">Sugestões</label>
+                    <textarea name="" id="" cols="30" rows="10">Nos dê uma sugestão</textarea>
+                </div>
+            </form>
+        </section>
+    </div>
+
+    <div class="produto" id="produtos">
+        <div>
+            produto
+        </div>
+        <div>
+            produto
+        </div>
+        <div>
+            produto
+        </div>
+        <div>
+            produto
+        </div>
+        <div>
+            produto
+        </div>
+        <div>
+            produto
+        </div>
+        <div>
+            produto
+        </div>
+        <div>
+            produto
+        </div>
+        <div>
+            produto
+        </div>
+    </div>
 </body>
 
 </html>
