--- a/aula36 (599)/index.html
+++ b/aula36 (599)/index.html
@@ -121,32 +121,47 @@
     </div>
 
     <div class="produto" id="produtos">
-        <div>
-            produto
-        </div>
-        <div>
-            produto
-        </div>
-        <div>
-            produto
-        </div>
-        <div>
-            produto
-        </div>
-        <div>
-            produto
-        </div>
-        <div>
-            produto
-        </div>
-        <div>
-            produto
-        </div>
-        <div>
-            produto
-        </div>
-        <div>
-            produto
+        <h2>Produtos</h2>
+        <div class="grupo">
+            <div class="pdt">
+                produto
+            </div>
+            <div class="pdt">
+                produto
+            </div>
+            <div class="pdt">
+                produto
+            </div>
+            <div class="pdt">
+                produto
+            </div>
+            <div class="pdt">
+                produto
+            </div>
+            <div class="pdt">
+                produto
+            </div>
+            <div class="pdt">
+                produto
+            </div>
+            <div class="pdt">
+                produto
+            </div>
+            <div class="pdt">
+                produto
+            </div>
+            <div class="pdt">
+                produto
+            </div>
+            <div class="pdt">
+                produto
+            </div>
+            <div class="pdt">
+                produto
+            </div>
+            <div class="pdt">
+                produto
+            </div>
         </div>
     </div>
 </body>
