tentando entender o que quebra meu css

--- a/aula36 (599)/index.html
+++ b/aula36 (599)/index.html
@@ -15,8 +15,7 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#sobrenos">Sobre nós</a></li>
-                <li><a href="#contatos">Contatos</a></li>
-                <li><a href="#produtos">Produtos</a></li>
+
             </ul>
         </nav>
     </header>
@@ -83,87 +82,16 @@
         </div>
     </div>
 
-    <div class="sobrenos" id="sobrenos">
-        <section>
+        <section  class="sobrenos" id="sobrenos">
             <h1>Saiba mais a nosso respeito!</h1>
 
-            <h2>Sobre a empresa</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod provident voluptas deleniti laboriosam ut dolor minus mollitia soluta! Nesciunt laboriosam, minima perferendis a reprehenderit illum tenetur in necessitatibus fuga provident.</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus, facilis quam. Unde, mollitia fugit repudiandae voluptas consequatur corporis ex voluptatibus, enim pariatur exercitationem facere est error incidunt quam officia voluptatem.</p>
+            <div class="content">
+                <h2>Sobre a empresa</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod provident voluptas deleniti laboriosam ut dolor minus mollitia soluta! Nesciunt laboriosam, minima perferendis a reprehenderit illum tenetur in necessitatibus fuga provident. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis odio quidem accusantium quos, reiciendis, dolores ipsam, obcaecati quasi eius voluptatibus aperiam quod itaque maiores a doloribus sapiente molestias. Voluptates, provident?</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus, facilis quam. Unde, mollitia fugit repudiandae voluptas consequatur corporis ex voluptatibus, enim pariatur exercitationem facere est error incidunt quam officia voluptatem. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum placeat, temporibus eveniet mollitia cupiditate provident nam delectus corporis labore, deleniti voluptatibus possimus, doloribus repudiandae! Facere minima nisi repellat laboriosam temporibus!</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus, facilis quam. Unde, mollitia fugit repudiandae voluptas consequatur corporis ex voluptatibus, enim pariatur exercitationem facere est error incidunt quam officia voluptatem.</p>
+            </div>
        </section>
-    </div>
-
-    <div class="contato" id="contatos">
-        <section>
-            <h1>Contate-nos</h1>
-            <form action="#">
-                <div>
-                    <label for="nome">Nome</label>
-                    <input type="text" name="nome" id="nome">
-                </div>
-
-                <div>
-                    <label for="telefone">Telefone</label>
-                    <input type="number" name="telefone" id="telefone">
-                </div>
-
-                <div>
-                    <label for="email">E-mail</label>
-                    <input type="email" name="email" id="email">
-                </div>
-
-                <div>
-                    <label for="sugestoes">Sugestões</label>
-                    <textarea name="" id="" cols="30" rows="10">Nos dê uma sugestão</textarea>
-                </div>
-            </form>
-        </section>
-    </div>
-
-    <div class="produto" id="produtos">
-        <h2>Produtos</h2>
-        <div class="grupo">
-            <div class="pdt">
-                produto
-            </div>
-            <div class="pdt">
-                produto
-            </div>
-            <div class="pdt">
-                produto
-            </div>
-            <div class="pdt">
-                produto
-            </div>
-            <div class="pdt">
-                produto
-            </div>
-            <div class="pdt">
-                produto
-            </div>
-            <div class="pdt">
-                produto
-            </div>
-            <div class="pdt">
-                produto
-            </div>
-            <div class="pdt">
-                produto
-            </div>
-            <div class="pdt">
-                produto
-            </div>
-            <div class="pdt">
-                produto
-            </div>
-            <div class="pdt">
-                produto
-            </div>
-            <div class="pdt">
-                produto
-            </div>
-        </div>
-    </div>
 </body>
 
 </html>
