--- a/aula36 (599)/index.html
+++ b/aula36 (599)/index.html
@@ -1,97 +1,45 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula 34 (593) - Aplicando MediaQueries com o exercicio da aula 29</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Document</title>
 </head>
-
 <body>
-    <header class="menu">
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#sobrenos">Sobre nós</a></li>
-
-            </ul>
-        </nav>
-    </header>
-    <div class="grid" id="home">
+    <div class="grid">
         <div class="col">
-            <div class="conteudo">
+            <div class="col-content">
                 conteudo
             </div>
         </div>
         <div class="col">
-            <div class="conteudo">
+            <div class="col-content">
                 conteudo
             </div>
         </div>
         <div class="col">
-            <div class="conteudo">
+            <div class="col-content">
                 conteudo
             </div>
         </div>
         <div class="col">
-            <div class="conteudo">
+            <div class="col-content">
                 conteudo
             </div>
         </div>
         <div class="col">
-            <div class="conteudo">
+            <div class="col-content">
                 conteudo
             </div>
         </div>
         <div class="col">
-            <div class="conteudo">
+            <div class="col-content">
                 conteudo
             </div>
         </div>
-        <div class="col">
-            <div class="conteudo">
-                conteudo
-            </div>
-        </div>
-        <div class="col">
-            <div class="conteudo">
-                conteudo
-            </div>
-        </div>
-        <div class="col">
-            <div class="conteudo">
-                conteudo
-            </div>
-        </div>
-        <div class="col">
-            <div class="conteudo">
-                conteudo
-            </div>
-        </div>
-        <div class="col">
-            <div class="conteudo">
-                conteudo
-            </div>
-        </div>
-        <div class="col">
-            <div class="conteudo">
-                conteudo
-            </div>
-        </div>
+      
     </div>
-
-        <section  class="sobrenos" id="sobrenos">
-            <h1>Saiba mais a nosso respeito!</h1>
-
-            <div class="content">
-                <h2>Sobre a empresa</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod provident voluptas deleniti laboriosam ut dolor minus mollitia soluta! Nesciunt laboriosam, minima perferendis a reprehenderit illum tenetur in necessitatibus fuga provident. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis odio quidem accusantium quos, reiciendis, dolores ipsam, obcaecati quasi eius voluptatibus aperiam quod itaque maiores a doloribus sapiente molestias. Voluptates, provident?</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus, facilis quam. Unde, mollitia fugit repudiandae voluptas consequatur corporis ex voluptatibus, enim pariatur exercitationem facere est error incidunt quam officia voluptatem. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum placeat, temporibus eveniet mollitia cupiditate provident nam delectus corporis labore, deleniti voluptatibus possimus, doloribus repudiandae! Facere minima nisi repellat laboriosam temporibus!</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus, facilis quam. Unde, mollitia fugit repudiandae voluptas consequatur corporis ex voluptatibus, enim pariatur exercitationem facere est error incidunt quam officia voluptatem.</p>
-            </div>
-       </section>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur odio ratione itaque deserunt officia obcaecati amet architecto magni exercitationem. Corporis mollitia odit doloribus hic! Neque iure ea excepturi nobis et!</p>
 </body>
-
 </html>
