--- a/aula36 (599)/index.html
+++ b/aula36 (599)/index.html
@@ -38,6 +38,36 @@
                 conteudo
             </div>
         </div>
+        <div class="col">
+            <div class="col-content">
+                conteudo
+            </div>
+        </div>
+        <div class="col">
+            <div class="col-content">
+                conteudo
+            </div>
+        </div>
+        <div class="col">
+            <div class="col-content">
+                conteudo
+            </div>
+        </div>
+        <div class="col">
+            <div class="col-content">
+                conteudo
+            </div>
+        </div>
+        <div class="col">
+            <div class="col-content">
+                conteudo
+            </div>
+        </div>
+        <div class="col">
+            <div class="col-content">
+                conteudo
+            </div>
+        </div>
       
     </div>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur odio ratione itaque deserunt officia obcaecati amet architecto magni exercitationem. Corporis mollitia odit doloribus hic! Neque iure ea excepturi nobis et!</p>
