--- a/aula36 (599)/index.html
+++ b/aula36 (599)/index.html
@@ -7,7 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="grid">
+
+    <header class="menu">
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#sobre">Sobre nós</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <div id="home" class="grid">
         <div class="col">
             <div class="col-content">
                 conteudo
@@ -68,8 +78,55 @@
                 conteudo
             </div>
         </div>
-      
+        <div class="col">
+            <div class="col-content">
+                conteudo
+            </div>
+        </div>
+        <div class="col">
+            <div class="col-content">
+                conteudo
+            </div>
+        </div>
+        <div class="col">
+            <div class="col-content">
+                conteudo
+            </div>
+        </div>
+        <div class="col">
+            <div class="col-content">
+                conteudo
+            </div>
+        </div>
+        <div class="col">
+            <div class="col-content">
+                conteudo
+            </div>
+        </div>
+        <div class="col">
+            <div class="col-content">
+                conteudo
+            </div>
+        </div>  
+        <div class="col">
+            <div class="col-content">
+                conteudo
+            </div>
+        </div>
+        <div class="col">
+            <div class="col-content">
+                conteudo
+            </div>
+        </div>  
+
     </div>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur odio ratione itaque deserunt officia obcaecati amet architecto magni exercitationem. Corporis mollitia odit doloribus hic! Neque iure ea excepturi nobis et!</p>
+
+    <section id="sobre" class="sobre">
+        <div class="content">
+            <h1>Sobre nós</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur odio ratione itaque deserunt officia obcaecati amet architecto magni exercitationem. Corporis mollitia odit doloribus hic! Neque iure ea excepturi nobis et!</p>
+        </div>
+    </section>
+
 </body>
 </html>
