--- a/testes/refazendo-aula36/index.html
+++ b/testes/refazendo-aula36/index.html
@@ -18,6 +18,47 @@
                 content
             </div>
         </div>
+        <div class="col">
+            <div class="col-filha">
+                content
+            </div>
+        </div>
+        <div class="col">
+            <div class="col-filha">
+                content
+            </div>
+        </div>
+        <div class="col">
+            <div class="col-filha">
+                content
+            </div>
+        </div>
+        <div class="col">
+            <div class="col-filha">
+                content
+            </div>
+        </div>
+        <div class="col">
+            <div class="col-filha">
+                content
+            </div>
+        </div>
+        <div class="col">
+            <div class="col-filha">
+                content
+            </div>
+        </div>
+        <div class="col">
+            <div class="col-filha">
+                content
+            </div>
+        </div>
     </div>
+    <section class="sec2">
+        <div class="content">
+            <h1>Seção 2</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum porro officia quia quibusdam. Obcaecati, cumque molestiae iste repudiandae nam eius, culpa necessitatibus voluptatem veritatis dignissimos odit, provident voluptas optio ipsum!</p>
+        </div>
+    </section>
 </body>
 </html>
