--- a/testes/refazendo-aula36/index.html
+++ b/testes/refazendo-aula36/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,13 @@
     <title>Revisão</title>
 </head>
 <body>
-    <div class="grid">
+    <nav class="menu">
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#nos">Sobre nós</a></li>
+        </ul>
+    </nav>
+    <div id="home" class="grid">
         <div class="col">
             <div class="col-filha">
                 content
@@ -54,7 +60,7 @@
             </div>
         </div>
     </div>
-    <section class="sec2">
+    <section id="nos" class="sec2">
         <div class="content">
             <h1>Seção 2</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum porro officia quia quibusdam. Obcaecati, cumque molestiae iste repudiandae nam eius, culpa necessitatibus voluptatem veritatis dignissimos odit, provident voluptas optio ipsum!</p>
