--- a/aula38 (602)/index.html
+++ b/aula38 (602)/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Flexbox - Pt 01</title>
 </head>
 <body>
-    
+    <div class="flex-container">
+        <div class="flex-item">Lorem</div>
+        <div class="flex-item">Dois</div>
+        <div class="flex-item">Três</div>
+        <div class="flex-item">Quatro</div>
+        <div class="flex-item">Cinco</div>
+    </div>
 </body>
 </html>
