Aula 604 (41) Flexbox Parte 3

--- a/aula41 (604)/index.html
+++ b/aula41 (604)/index.html
@@ -13,6 +13,6 @@
         <div class="flex-item">Três</div>
         <div class="flex-item">Quatro</div>
         <div class="flex-item">Cinco</div>
-    </div>
+    </div><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum nihil harum veritatis necessitatibus ratione explicabo ducimus consequatur aliquam quia enim. Eius eum rerum quaerat optio doloremque sint numquam! Illo, explicabo.</span>
 </body>
 </html>
