trabalhando na contrução de sites com grid

--- a/aula46 (609)/index.html
+++ b/aula46 (609)/index.html
@@ -9,24 +9,33 @@
 </head>
 
 <body>
-    <div class="grid">
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
-        <div>4</div>
-        <div>5</div>
-        <div>6</div>
-        <div>7</div>
-        <div>8</div>
-        <div>9</div>
-        <div>10</div>
-        <div>11</div>
-        <div>12</div>
-        <div>13</div>
-        <div>14</div>
-        <div>15</div>
-        <div>16</div>
-        <div>17</div>
+    <div class="container">
+        <div class="grid">
+            <div>
+                <h1>Logo</h1>
+                <nav>Menu</nav>
+            </div>
+            <div>
+                <nav>
+                    <ul>
+                        <li>Item 1</li>
+                        <li>Item 1</li>
+                        <li>Item 1</li>
+                        <li>Item 1</li>
+                    </ul>
+                </nav>
+            </div>
+            <div>
+                <h1>Olá, mundo!</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque ab vero beatae veritatis et impedit quasi ut quibusdam. Nulla blanditiis vel magnam vitae sint, quas laborum exercitationem excepturi officiis facere.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque ab vero beatae veritatis et impedit quasi ut quibusdam. Nulla blanditiis vel magnam vitae sint, quas laborum exercitationem excepturi officiis facere.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque ab vero beatae veritatis et impedit quasi ut quibusdam. Nulla blanditiis vel magnam vitae sint, quas laborum exercitationem excepturi officiis facere.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque ab vero beatae veritatis et impedit quasi ut quibusdam.</p>
+            </div>
+            <div>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque ab vero beatae veritatis et impedit quasi ut quibusdam. Nulla blanditiis vel magnam vitae sint, quas laborum exercitationem excepturi officiis facere lorem lorem lorem vitae sint, quas.</p>
+            </div>
+        </div>
     </div>
 </body>
 
